# Anidle

./: .gitignore  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile  README.md  api.cpp  api.h  db.cpp  db.h  http.cpp  http.h  json.cpp  json.h  jwt.cpp  jwt.h  log.cpp  log.h  main.cpp  request.cpp  request.h  response.cpp  response.h  route.cpp  route.h  security.cpp  security.h  server.cpp  server.h  types.h
backend/.cache/clangd/index/: main.cpp.74A2494FEF524923.idx  request.cpp.3A7630B14E77D9A3.idx  request.h.C90AA5B91110C220.idx  response.cpp.2DC0D1F9EB21DC92.idx  response.h.91F586DB7B3BEC84.idx  server.cpp.C04BDC6741760FD0.idx  server.h.F46C81B9E105C49B.idx  types.h.6430C4BEF62D4142.idx
